--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -1302,10 +1302,10 @@ by evaluating the quality of data represented by further well-established and ne
 
 Almost 1/2 of all 213 constraints and more than 50\% of the \emph{Disco} and the \emph{QB} constraints are \emph{vocabulary constraints}.
 The \emph{SKOS} constraints are nearly to the same extend \emph{vocabulary}, \emph{simple}, and \emph{complex constraints}. 
-Hence, a significant amount of 46 \% of the constraints are directly extractable from formal specifications of well-established and newly defined vocabularies. 
+%Hence, a significant amount of 46 \% of the constraints are directly extractable from formal specifications of well-established and newly defined vocabularies. 
 \begin{hyp}
-As vocabulary constraints can be expressed by modeling languages like RDF, RDFS, and OWL 2,
-the further development of constraint languages should concentrate on expressing simple and especially complex constraints which in most cases can only be expressed by plain SPARQL.   
+As a significant amount of 46 \% of the constraints are vocabulary constraints which can be expressed by modeling languages like RDF, RDFS, and OWL 2,
+the further development of constraint languages should concentrate on expressing simple and especially complex constraints which up to now in most cases can only be expressed by plain SPARQL.   
 \end{hyp} 
 
 Nearly 1/2 of the violations are caused by \emph{complex constraints}, 1/3 by \emph{simple constraints}, and 1/5 by \emph{vocabulary constraints}.
