--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -1309,11 +1309,11 @@ the further development of constraint languages should concentrate on expressing
 \end{hyp} 
 
 Nearly 1/2 of the violations are caused by \emph{complex constraints}, 1/3 by \emph{simple constraints}, and 1/5 by \emph{vocabulary constraints}.
-
-\begin{hyp}
 The fact that only 1/5 of all violations result from vocabulary constraints, 
 even though, 46\% of all constraints are vocabulary constraints,
-indicates good data quality in general (according to formal specifications of vocabularies).
+indicates good data quality in general with regard to the formal specifications of vocabularies.
+\begin{hyp}
+For all vocabularies, data corresponds to their formal specifications which demonstrates that constraint formulation in general works. 
 \end{hyp}
 
 2/3 of the \emph{Disco} violations result from \emph{vocabulary constraints},
