--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -1308,10 +1308,10 @@ As a significant amount of 46 \% of the constraints are vocabulary constraints w
 the further development of constraint languages should concentrate on expressing simple and especially complex constraints which up to now in most cases can only be expressed by plain SPARQL.   
 \end{hyp} 
 
-Nearly 1/2 of the violations are caused by \emph{complex constraints}, 1/3 by \emph{simple constraints}, and 1/5 by \emph{vocabulary constraints}.
-The fact that only 1/5 of all violations result from vocabulary constraints, 
-even though, 46\% of all constraints are vocabulary constraints,
-indicates good data quality in general with regard to the formal specifications of vocabularies.
+Nearly 1/2 of all violations are caused by \emph{complex constraints}, 1/3 by \emph{simple constraints}, and 1/5 by \emph{vocabulary constraints}.
+The fact that only 1/5 of all violations result from \emph{vocabulary constraints}, 
+even though, 46\% of all constraints are \emph{vocabulary constraints},
+indicates good data quality for all vocabularies with regard to their formal specifications.
 \begin{hyp}
 For all vocabularies, data corresponds to their formal specifications which demonstrates that constraint formulation in general works. 
 \end{hyp}
