--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -1337,26 +1337,6 @@ data providers are experienced in publishing their data in conformance with thes
 and the formal specifications are more elaborated and therefore clearer. 
 As a consequence, vocabulary constraints are satisfied which leads to better data quality.  
 
-\begin{hyp}
-A significant amount of 47\% of the violations refer to complex constraints that are not easily expressible in existing languages which confirms the necessity to provide suitable constraint languages.
-\end{hyp} 
-\emph{Vocabulary} and \emph{simple constraints} can be expressed easily, concisely, and intuitively by either modeling languages (e.g., \emph{RDF}, \emph{RDFS}, \emph{OWL 2}) or constraint languages (e.g., \emph{ShEx}, \emph{ReSh}, \emph{SPIN}). 
-This is not the case, however, for \emph{complex constraints} which in most cases still can only be expressed by plain \emph{SPARQL}. 
-As almost 1/2 of all violations are caused by \emph{complex constraints}, 
-data quality can be significantly improved when \emph{complex constraints} can also be expressed more easily, concisely, and intuitively.
-Therefore, existing constraint languages have to be extended or new constraint languages have to be developed.
-
-63\% of all violations are caused by \emph{warning constraints} which are only 10\% of all constraints. 
-Only 6\% of the violations are caused by \emph{error constraints} which are 49\% of all constraints.
-
-\begin{hyp}
-In general, data quality is high (according to severity levels) since only 6\% of the violations are caused by error constraints which are 49\% of all defined constraints.
-\end{hyp} 
-
-\begin{hyp}
-The percentage of severe violations is very low (6\%), compared to about 2/3 of warning violations and 1/3 of informational violations, which implies that proper constraint languages can significantly improve the data quality beyond fundamental requirements.
-\end{hyp} 
-
 \begin{table}[H]
 		\scriptsize
     \begin{center}
@@ -1391,6 +1371,26 @@ The percentage of severe violations is very low (6\%), compared to about 2/3 of 
 		\label{tab:evaluation-constraint-violations}
     \end{center}
 \end{table}
+
+\begin{hyp}
+A significant amount of 47\% of the violations refer to complex constraints that are not easily, concisely, and intuitively expressible in existing constraint languages which confirms the necessity to provide suitable constraint languages.
+\end{hyp} 
+In general, \emph{vocabulary} and \emph{simple constraints} are easily, concisely, and intuitively expressible by either modeling languages (e.g., \emph{RDF}, \emph{RDFS}, \emph{OWL 2}) or constraint languages (e.g., \emph{ShEx}, \emph{ReSh}, \emph{SPIN}). 
+This is not the case, however, for \emph{complex constraints} which in most cases are still only expressible by plain \emph{SPARQL}. 
+As almost 1/2 of all violations are caused by \emph{complex constraints}, 
+data quality can be significantly improved when suitable constraint languages are developed which enable to define \emph{complex constraints} in an easy, concise, and intuitive way.
+%Therefore, existing constraint languages have to be extended or new constraint languages have to be developed.
+
+63\% of all violations are caused by \emph{warning constraints} which are only 10\% of all constraints. 
+Only 6\% of the violations are caused by \emph{error constraints} which are 49\% of all constraints.
+
+\begin{hyp}
+In general, data quality is high (according to severity levels) since only 6\% of the violations are caused by error constraints which are 49\% of all defined constraints.
+\end{hyp} 
+
+\begin{hyp}
+The percentage of severe violations is very low (6\%), compared to about 2/3 of warning violations and 1/3 of informational violations, which implies that proper constraint languages can significantly improve the data quality beyond fundamental requirements.
+\end{hyp} 
 
 80\% of the \emph{QB} constraints are error constraints.
 More than 50\% of the \emph{Disco} and \emph{SKOS} constraints, however, are informational constraints.
