--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -1292,14 +1292,11 @@ but we can formulate several hypotheses to direct the further development of con
 As these hypotheses cannot be proved yet, 
 they still have to be verified or falsified
 by evaluating the quality of data represented by further well-established and newly developed vocabularies.
-
 %More than the half of them are $\mathcal{CT}_{B}$, nearly a third $\mathcal{CT}_{S}$, and only a sixth $\mathcal{CT}_{C}$ constraint types.
 %For \emph{Disco}, \emph{QB}, and \emph{SKOS}, more than 50\% of the instantiated constraint types are $\mathcal{CT}_{B}$ constraint types 
 %(for \emph{QB} even three quarters).
 %\emph{Existential quantifications} (\emph{R-86}, 32.4\%, \emph{Disco}), \emph{data model consistency} (31.4\%, \emph{QB}), and \emph{structure} (28.6\%, \emph{SKOS}) are the constraint types the most constraints are instantiated from.
-
 %\tb{1. Fakten (diese Fakten bewirken eine Erhöhung der Datenqualität) 2. Hypothese (unsere Interpretation der Ergebnisse, unsere Behauptung)}
-
 Almost 1/2 of all 213 constraints and more than 50\% of the \emph{Disco} and the \emph{QB} constraints are \emph{vocabulary constraints}.
 The \emph{SKOS} constraints are nearly to the same extend \emph{vocabulary}, \emph{simple}, and \emph{complex constraints}. 
 %Hence, a significant amount of 46 \% of the constraints are directly extractable from formal specifications of well-established and newly defined vocabularies. 
@@ -1381,10 +1378,12 @@ data quality can be significantly improved when suitable constraint languages ar
     \end{center}
 \end{table}
 
-2/3 of all violations are caused by \emph{warning constraints} which are only 10\% of all constraints. 
-Only 6\% of the violations are caused by \emph{error constraints} which are 49\% of all constraints.
-1/3 of all violations are raised by informational constraints.
-This means that in general, data quality is high with regard to the severity level of constraints.
+1/2 of all constraints are \emph{error constraints} and
+10\% of all constraints are \emph{warning constraints}.
+\emph{Informational constraints} caused 1/3 and
+\emph{warning constraints} 2/3 of all violations.
+As the percentage of severe violations is very low for all vocabularies,
+data quality is high with regard to the severity level of constraints.
 
 \begin{hyp}
 The percentage of severe violations is very low, compared to about 2/3 of warning violations and 1/3 of informational violations, which implies that proper constraint languages can significantly improve the data quality beyond fundamental requirements.
