--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -1353,41 +1353,6 @@ data quality is high with regard to the severity level of constraints.
 The percentage of severe violations is very low, compared to about 2/3 of warning violations and 1/3 of informational violations, which implies that proper constraint languages can significantly improve the data quality beyond fundamental requirements.
 \end{hyp} 
 
-\begin{table}[H]
-		\scriptsize
-    \begin{center}
-    \begin{tabular}{@{}lcccccccc@{}}
-    %       & \multicolumn{2}{c}{\textbf{Vocabularies}}
-    %\\  \cmidrule{2-3}
-		\hline
-    \multirow{2}{*}{} &
-      \multicolumn{2}{c}{\textbf{\emph{Disco}}} &
-      \multicolumn{2}{c}{\textbf{\emph{QB}}} &
-      \multicolumn{2}{c}{\textbf{\emph{SKOS}}} &
-      \multicolumn{2}{c}{\textbf{\emph{Total}}} \\
-    \textbf{} & C & CV & C & CV & C & CV & C & CV \\
-    \hline
-    %\\ \midrule
-		 & 143 & 3,575,002 & 35 & 45,635,861 & 35 & 5,540,988 & 213 & 54,751,851 \\
-		\hline
-		\textbf{\emph{complex}} & 25.9\% & 18.3\% & 37.1\% & \textbf{100\%} & \textbf{37.1\%} & 21.4\% & 33.4\% & \textbf{46.6\%} \\
-		\textbf{\emph{simple}} & 19.6\% & 15.7\% & 8.6\% & 0.0\% & \textbf{34.3\%} & \textbf{78.6\%} & 20.8\% & 31.4\% \\
-		\textbf{\emph{vocabulary}} & \textbf{54.6\%} & \textbf{66.1\%} & \textbf{54.3\%} & 0.0\% & \textbf{28.6\%} & 0.0\% & \textbf{45.8\%} & 22.0\% \\
-		%\hline
-		%\emph{CV (}$\mathcal{C}_B ^{\mathcal{R}}$\emph{)} & 2,333,365 (65.3\%) & 1,777 (0\%) & 0 (0\%) & 2,335,142 (4.3\%) \\
-		%\emph{CV (}$\overline{\mathcal{C}_B ^{\mathcal{R}}}$\emph{)} & 28,000 (0.8\%) & 0 (0\%) & 0 (0\%) & 28,000 (0.1\%) \\
-		\hline
-		\textbf{\emph{info}} & \textbf{52.5\%} & \textbf{52.6\%} & 11.4\% & 0.0\% & \textbf{60.0\%} & 41.2\% & \textbf{41.3\%} & 31.3\% \\
-		\textbf{\emph{warning}} & 7.0\% & 29.4\% & 8.6\% & \textbf{99,8\%} & 14.3\% & \textbf{58.8\%} & 10.0\% & \textbf{62.7\%} \\
-		\textbf{\emph{error}} & 40.6\% & 18\% & \textbf{80.0\%} & 0.3\% & 25.7\% & 0.0\% & \textbf{48.8\%} & 6.1\%\\
-    \bottomrule
-    \end{tabular}
-    \\ \emph{C (constraints), CV (constraint violations)}
-    \caption{Constraints and Constraint Violations}
-		\label{tab:evaluation-constraint-violations}
-    \end{center}
-\end{table}
-
 80\% of the \emph{QB} constraints are \emph{error constraints}.
 More than 50\% of the \emph{Disco} and \emph{SKOS} constraints, however, are \emph{informational constraints}.
 1/6 of the Disco violations are caused by \emph{error constraints} and
@@ -1483,6 +1448,9 @@ Especially for newly developed vocabularies, constraint languages should be used
 %The constraints responsible for the largest amounts of constraint violations are \emph{DISCO-C-LABELING-AND-DOCUMENTATION-06} and \emph{DISCO-C-COMPARISON-VARIABLES-02} (both 547,916; \emph{Disco}), \emph{DATA-CUBE-C-DATA-MODEL-CONSISTENCY-05} (45,514,102; \emph{QB}), and \emph{SKOS-C-LANGUAGE-TAG-CARDINALITY-01} (2,508,903; \emph{SKOS}).
 
 Table \ref{tab:evaluation-complexity-severity} shows the relation between the complexity and the severity level of all 213 constraints.
+More than 1/2 of the \emph{vocabulary constraints} are \emph{error constraints},
+more than 3/4 of the \emph{simple constraints} are \emph{informational constraints}, and
+\emph{complex constraints} are to the same extend \emph{informational} or \emph{error constraints}. 
 
 \begin{table}[H]
 		\scriptsize
@@ -1510,13 +1478,11 @@ Table \ref{tab:evaluation-complexity-severity} shows the relation between the co
 \end{table}
 
 \begin{hyp}
-More than the 1/2 of the vocabulary constraints are error constraints,
-more than 3/4 of the simple constraints are informational constraints, and
-complex constraints are either informational or error constraints. 
+The further development of constraint languages should concentrate on how to express complex constraints as 44\% of all complex constraints are also serious ones.
 \end{hyp}
 
-As vocabulary constraints are directly extractable from vocabularies and therefore ensure the syntax and semantics of vocabularies,
-violations of vocabulary constraints are more severe than violations caused by simple constraints which are easily defined in addition to vocabulary constraints.
+As vocabulary constraints are contained within formal specifications of vocabularies and therefore directly ensure their syntax and semantics,
+violations of vocabulary constraints are more severe than violations caused by simple constraints which are not part of vocabularies.
 In many cases, complex constraints are also needed to express severe constraints which cannot be expressed by modeling languages.
 The relation between complexity and severity shows the importance to develop constraint languages which are enable to express severe complex constraints. 
 
