--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -276,7 +276,7 @@ For research institutes, data libraries, and data archives,
 RDF data validation according to predefined constraints is a much sought-after feature, 
 particularly as this is taken for granted in the XML world.
 Based on our work in the DCMI RDF Application Profiles Task Group and in cooperation with the W3C Data Shapes Working Group, we identified and published by today 82 types of constraints that are required by various stakeholders for data applications.
-In this paper, we formulate 246 constraints of 53 different types on six different vocabularies (Disco, QB, SKOS, PHDD, DCAT, XKOS) and classify them according to the complexity level of their type and their severity level. For 114 of these constraints, we evaluate the data quality of 15,694 data sets (4,26 billion triples) of research data for the social, behavioural, and economic (SBE) sciences obtained from 33 SPARQL endpoints. 
+In this paper, we formulate 246 constraints of 53 different types on six different vocabularies (Disco, QB, SKOS, PHDD, DCAT, XKOS) and classify them according to the complexity level of their type and their severity level. For 114 of these constraints, we evaluate the data quality of 15,694 data sets (4,26 billion triples) of research data for the social, behavioural, and economic (SBE) sciences obtained from 33 SPARQL endpoints. \ke{check numbers}
 Based on the results, we formulate several hypotheses to direct the further development of constraint langugaes.
 
 
@@ -298,29 +298,22 @@ and reuse data collected and archived for research \cite{Vardigan2008}.
 
 In XML, the definition of schemas containing data constraints and the validation of data according to these constraints is commonly used to ensure a certain level of data quality.
 
-With the rise of the Web of Data, data professionals and institutions are very interested in having their data be discovered and used by publishing their data directly in RDF or at least publish accurate metadata about their data to facilitate data integration. Therefore, not only existing vocabularies like SKOS are used; 
+With the rise of the Web of Data, data professionals and institutions are very interested in having their data be discovered and used by publishing their data directly in RDF or at least publish accurate metadata about their data to facilitate data integration. Therefore, not only established vocabularies like SKOS are used; 
 recently, members of the \emph{SBE} and Linked Data community developed with the \emph{DDI-RDF Discovery Vocabulary (Disco)}\footnote{\url{http://rdf-vocabulary.ddialliance.org/discovery.html}} a means to expose \emph{DDI} metadata as Linked Data. 
 
-For constraint formulation and validation on RDF data, several languages exist, like \emph{Shape Expressions}, \emph{Resource Shapes} or \emph{Description Set Profiles}. \emph{OWL 2} is also used as a constraint language under a closed world assumption. With its direct support of validation via SPARQL, \emph{SPIN}%\footnote{\url{http://spinRDF.org/}}
-is very popular and certainly plays an important role for future developments in this field.
-%that more or less explicitly address the \emph{SBE} community.
+For constraint formulation and validation on RDF data, several languages exist or are currently developed, like \emph{Shape Expressions}, \emph{Resource Shapes} or \emph{Description Set Profiles}. \emph{OWL 2} is also used as a constraint language under a closed world assumption. With its direct support of validation via SPARQL, \emph{SPIN}%\footnote{\url{http://spinRDF.org/}}
+is very popular and certainly plays an important role for future developments in this field. It is particularly interesting as a means to validate arbitrary constraint languages by mapping them to SPARQL \cite{BoschEckert2014-2}. Yet, there is no clear favorite and none of the languages is able to meet all requirements raised by data practitioners. Further research and development therefore is needed.
 
 In 2013, the W3C organized the RDF Validation Workshop\footnote{\url{http://www.w3.org/2012/12/rdf-val/}}, 
 where experts from industry, government, and academia discussed first use cases for RDF constraint formulation and RDF data validation.
 In 2014, two working groups on RDF validation have been established to develop a language to express constraints on RDF data: 
-the W3C RDF Data Shapes working group\footnote{\url{http://www.w3.org/2014/rds/charter}} and the DCMI RDF Application Profiles task group\footnote{\url{http://wiki.dublincore.org/index.php/RDF-Application-Profiles}}. 
+the W3C RDF Data Shapes working group\footnote{\url{http://www.w3.org/2014/rds/charter}} and the DCMI RDF Application Profiles task group\footnote{\url{http://wiki.dublincore.org/index.php/RDF-Application-Profiles}} which among others bundles the requirements of data institutions of the cultural heritage and SBE sector and represents them in the W3C group. 
 
-Bosch and Eckert \cite{BoschEckert2014} collected the findings of these working groups and initiated a database of RDF validation requirements
-which is available for contribution at \url{http://purl.org/net/rdf-validation}.
-The intention is to collaboratively collect case studies, use cases, requirements, and solutions regarding RDF validation in a comprehensive and structured way. 
-The requirements are classified to better evaluate existing solutions and each requirement is directly mapped to a constraint type which is expressible by at least one constraint language.
-As \emph{SPIN} is the within the RDF validation community accepted and widely adopted way to check constraints on RDF data, Bosch and Eckert \cite{BoschEckert2014-2} use \emph{SPIN} as basis to define a
-validation environment (available at \url{http://purl.org/net/rdfval-demo}) in which the validation of any constraint language\footnote{The only limitation is that constraint languages must be represented in RDF} can be implemented by representing them in SPARQL. 
-The SPIN engine checks for each resource if it satisfies all constraints, which are associated with its assigned classes, and generates a result RDF graph containing information about all constraint violations.
+Within the DCMI task group, a collaboratively curated database of RDF validation requirements has been created which contains the findings of the working groups based on various case studies provided by data institutions \cite{BoschEckert2014}. It is publicly available and open for further contributions\footnote{Online at \url{http://purl.org/net/rdf-validation}}.
 
-%This paper aims to address two main \textbf{audiences}: 
-%(1) metadata practitioners seeking for how to represent metadata and data on different aggregation levels in RDF and
-%(2) metadata providers and harvesters ensuring high quality data and metadata by validating RDF data according to certain constraints.
+The database connects requirements to use cases, case studies and implementations and forms the basis of this paper. To gain a better understanding about the role of certain requirements for data quality and in order to direct the further development of constraint langugaes, we collected constraints for commonly used vocabularies in the SBE domain, either from the vocabularies themselves or from domain and data experts. All in all, this lead to TODO constraints on TODO vocabularies. We let the experts classify the constraints according to the severity if they are violated. Furthermore, we classified the type of each constraint (corresponding to a requirement) based on its complexity ranging from types commonly found in vocabulary specificatons (e.g., domain and range), over types that are simply stated using common constraint languages (e.g., cardinality restrictions) to complex types that involve complex data structures or need more sophisticated langugaes to be easily expressible (e.g., constraints on network topologies).\ke{Thomas: Ok so?}
+
+As we do not want to base our conclusions on the evaluations of vocabularies and constraint definitions alone, we conducted a large-scale experiment and evaluated the data quality of 15,694 data sets (4,26 billion triples) of research data for the social, behavioural, and economic (SBE) sciences obtained from 33 SPARQL endpoints.
 
 The \textbf{contribution} of this paper is the development of a system 
 \begin{enumerate}
