--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -338,7 +338,7 @@ In this paper, we discuss constraints on RDF data in general. Note that the data
 %Constraints are instantiated from constraint types in order to validate both metadata and data represented by any vocabulary. 
 %As constraint types are used to define constraints on (meta)data expressed by any vocabulary, the proposed constraint classification can be applied generically, i.e. vocabulary-independent. 
 
-\section{Motivation}
+\subsection{Motivation}
 \label{motivation}
 
 The data most often used in research within the \emph{SBE} community is \emph{person-level data} (or more generally \emph{record-unit data}, i.e., data collected about individuals, businesses, and households) in form of responses to studies or taken from administrative registers
