--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -1481,14 +1481,12 @@ more than 3/4 of the \emph{simple constraints} are \emph{informational constrain
 The further development of constraint languages should concentrate on how to express complex constraints as 44\% of all complex constraints are also serious ones.
 \end{hyp}
 
-As vocabulary constraints are contained within formal specifications of vocabularies and therefore directly ensure their syntax and semantics,
-violations of vocabulary constraints are more severe than violations caused by simple constraints which are not part of vocabularies.
-In many cases, complex constraints are also needed to express severe constraints which cannot be expressed by modeling languages.
-The relation between complexity and severity shows the importance to develop constraint languages which are enable to express severe complex constraints. 
+As \emph{vocabulary constraints} are part of formal specifications of vocabularies,
+violations of \emph{vocabulary constraints} are more severe than violations caused by \emph{simple constraints}.
+As \emph{SPARQL} is still used to express \emph{complex constraints} and as 44\% of all \emph{complex constraints} are serious,
+there is an obvious need to develop constraint languages which enable to express \emph{complex constraints}.
 
 \section{Conclusion and Future Work}
-
-\tb{ToDO}
 
 %In this paper, we showed in form of a complete real world running example how to represent metadata on person-level data (\emph{Disco}), metadata on aggregated data (\emph{QB}), and data on both aggregation levels in a rectangular format (\emph{PHDD}) in RDF and how therefore used vocabularies are interrelated (\textbf{contribution 1}, section \ref{rdf-representation}).
 %We explained why RDF validation is important in this context and how metadata on person-level data, aggregated data, thesauri, and statistical classifications as well as data on both aggregation levels is validated against constraints to ensure high (meta)data quality\footnote{The first appendix of this paper describing each constraint in detail is available at: \url{http://arxiv.org/abs/1504.04479} \cite{BoschZapilkoWackerowEckert2015}} (\textbf{contribution 2}, section \ref{rdf-validation}). 
