--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -594,7 +594,7 @@ which shows the importance to develop suitable constraint languages.
 \subsection{Classification of RDF Constraints}
 
 A concrete constraint is instantiated from one of the 82 constraint types and is defined for a specific vocabulary.
-It does not make sense to determine the severity of constraint violations of a constraint type,
+It does not make sense to determine the severity of constraint violations of an entire constraint type,
 as the severity of the violation of a given constraint depends on the individual context and vocabulary.
 %as the violation of one constraint may be severe,
 %whereas, the violation of another constraint of the same type may be minor.
